--- a/projeto/pubspec.yaml
+++ b/projeto/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_polyline_points: ^2.0.0
   location: ^5.0.3
   sqflite: ^2.3.2
+  google_maps_flutter_web: ^0.5.6+2
+  google_maps_flutter: ^2.6.0
   
 
 
