--- a/projeto/pubspec.yaml
+++ b/projeto/pubspec.yaml
@@ -29,7 +29,6 @@ dependencies:
   flutter_map_cancellable_tile_provider:
   flutter_map_geojson: ^1.0.6
   http: ^1.2.0
-  latlong2: ^0.9.0
   proj4dart: ^2.1.0
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.4
@@ -40,6 +39,7 @@ dependencies:
   sqflite: ^2.3.2
   google_maps_flutter_web: ^0.5.6+2
   google_maps_flutter: ^2.6.0
+  geocoding: ^3.0.0
   
 
 
