--- a/projeto/pubspec.yaml
+++ b/projeto/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_maps_flutter_web: ^0.5.6+2
   google_maps_flutter: ^2.6.0
   geocoding: ^3.0.0
+  path_provider: ^2.1.2
   
 
 
