--- a/projeto/pubspec.yaml
+++ b/projeto/pubspec.yaml
@@ -25,6 +25,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
   flutter_map:
   flutter_map_cancellable_tile_provider:
   flutter_map_geojson: ^1.0.6
@@ -41,7 +42,8 @@ dependencies:
   google_maps_flutter: ^2.6.0
   geocoding: ^3.0.0
   path_provider: ^2.1.2
-  geolocator: ^7.0.3
+  geolocator: ^10.0.0
+  lottie: ^3.1.0
   
   
 
@@ -53,3 +55,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lottie/
