--- a/projeto/android/app/src/main/AndroidManifest.xml
+++ b/projeto/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     
 
     <application
-        android:label="google_maps_in_flutter"
+        android:label="TrackMyRune"
         android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
         
