new lottie emoji and change name

--- a/projeto/android/app/src/main/AndroidManifest.xml
+++ b/projeto/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     
 
     <application
-        android:label="TrackMyRune"
+        android:label="TrackMyRun"
         android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
         
