remove google maps key

--- a/projeto/android/app/src/main/AndroidManifest.xml
+++ b/projeto/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <!-- TODO: Add your Google Maps API key here -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyAn_weheq9RG5aUoRJnTVHokr3dPUDkQaU"/>
+               android:value="YOUR_API_KEY"/>
 
         <activity
             android:name=".MainActivity"
